--- a/sketches/IrrigationApp/css/style1.scss
+++ b/sketches/IrrigationApp/css/style1.scss
@@ -1,16 +1,21 @@
+$break-small: 720px;
+$break-large: 1200px;
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   font: normal 18px/1.5 "Fira Sans", "Helvetica Neue", sans-serif;
   background: #CCC;
   color: #fff;
-  padding: 50px 0; }
+  padding: 50px 0;
+}
 
 .form-container {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+}
 
 form {
   width: 75%;
@@ -19,7 +24,8 @@ form {
   padding: 2em;
   background: #5abc9b;
   border-radius: 0.25em;
-  box-shadow: 0 0 2em rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
+}
 
 input,
 select,
@@ -33,52 +39,64 @@ textarea {
   border-width: 1px 1px 1px 0;
   border-radius: 0;
   appearance: textfield;
-  transition: 0.3s; }
+  transition: 0.3s;
+}
 
 input:focus,
 select:focus,
 textarea:focus {
   background: #FFF;
   box-shadow: inset 0.1em 0.1em 0.25em rga(0, 0, 0, 0.2);
-  outline: 0; }
+  outline: 0;
+}
 
 .form-field {
   display: flex;
-  margin-bottom: 1em; }
-  .form-field label {
+  margin-bottom: 1em;
+  label {
     flex: 0 1 7em;
     padding: 1em;
     background: #FFF;
     border: 1px solid #CCC;
-    color: #2d2d2d;
+    color: #2d2d2d;   
+
     font-weight: 400;
     letter-spacing: .09em;
     text-transform: uppercase;
+    
     font-size: 0.75em;
     text-align: center;
     text-shadow: 0 1px 0 #FFF;
-    lint-height: 1; }
-  .form-field input,
-  .form-field select,
-  .form-field textarea {
-    flex: 1; }
-  @media screen and (max-width: 720px) {
-    .form-field {
-      flex-wrap: wrap; }
-      .form-field label {
-        flex: 1; }
-      .form-field input,
-      .form-field select,
-      .form-field textarea {
-        flex: 1 1 100%;
-        padding: 1em; } }
+    lint-height: 1;
+  }
+  input,
+  select,
+  textarea {
+    flex: 1;
+  }
+  @media screen and (max-width: $break-small) {
+    flex-wrap: wrap;
+    label {
+      flex: 1;
+    }
+    input,
+    select,
+    textarea {
+      flex: 1 1 100%;
+      padding: 1em;
+    }
+  }
+}
 
 .submit-field {
-  flex-direction: row-reverse; }
-  .submit-field button {
+  flex-direction: row-reverse;
+  button {
     flex: 0 1 40%;
     margin-top: 10px;
     padding: 0.7em;
+    @media screen and (max-width: $break-small) {
+      flex: 0 1 100%;
+    }
     color: #f2f2f2;
     font-size: 1rem;
     font-family: inherit;
@@ -89,9 +107,6 @@ textarea:focus {
     border-radius: 0.25em;
     border: 0;
     transition: 0.3s;
-    cursor: pointer; }
-    @media screen and (max-width: 720px) {
-      .submit-field button {
-        flex: 0 1 100%; } }
-
-/*# sourceMappingURL=style.css.map */
+    cursor: pointer;
+  }
+}
