--- a/sketches/IrrigationApp/css/style.css
+++ b/sketches/IrrigationApp/css/style.css
@@ -46,17 +46,28 @@ textarea:focus {
   display: flex;
   margin-bottom: 1em; }
   .form-field label {
-    flex: 0 1 7em;
+    flex: 0 1 22em;
     padding: 1em;
     background: #FFF;
-    border: 1px solid #CCC;
+    border: 1px solid #5abc9b;
     color: #2d2d2d;
     font-weight: 400;
     letter-spacing: .09em;
     text-transform: uppercase;
     font-size: 0.75em;
     text-align: center;
-    text-shadow: 0 1px 0 #FFF;
+    lint-height: 1; }
+  .form-field span {
+    flex: 0 1 22em;
+    padding: 1em;
+    background: #CCC;
+    border: 1px solid #5abc9b;
+    color: #2d2d2d;
+    font-weight: 400;
+    letter-spacing: .09em;
+    text-transform: uppercase;
+    font-size: 0.65em;
+    text-align: center;
     lint-height: 1; }
   .form-field input,
   .form-field select,
