--- a/sketches/IrrigationApp/css/style.css
+++ b/sketches/IrrigationApp/css/style.css
@@ -5,19 +5,19 @@ body {
   font: normal 18px/1.5 "Fira Sans", "Helvetica Neue", sans-serif;
   background: #CCC;
   color: #fff;
-  padding: 50px 0; }
+  padding: 0; }
 
 .form-container {
-  display: flex;
+  display: -webkit-flex;
   justify-content: center;
   align-items: center; }
 
 form {
-  width: 75%;
+  width: 100%;
   max-width: 1000px;
-  min-width: 400px;
+  min-width: 300px;
   padding: 2em;
-  background: #5abc9b;
+  background: #e6e6e6;
   border-radius: 0.25em;
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.2); }
 
@@ -42,14 +42,40 @@ textarea:focus {
   box-shadow: inset 0.1em 0.1em 0.25em rga(0, 0, 0, 0.2);
   outline: 0; }
 
+.align-right {
+  float: right;
+  margin-right: 15px; }
+
+.align-left {
+  float: left; }
+
+.status-bar {
+  display: -webkit-flex;
+  flex-direction: row;
+  margin-bottom: 0.5em; }
+  .status-bar label {
+    -webkit-flex: 0 1 22em; }
+  @media screen and (max-width: 600px) {
+    .status-bar {
+      -webkit-flex-wrap: wrap; }
+      .status-bar label {
+        -webkit-flex: 1;
+        -webkit-flex-direction: column; }
+      .status-bar input,
+      .status-bar select,
+      .status-bar textarea {
+        -webkit-flex: 1 1 100%;
+        padding: 1em; } }
+
 .form-field {
-  display: flex;
-  margin-bottom: 1em; }
+  display: -webkit-flex;
+  flex-direction: row;
+  margin-bottom: 0.5em; }
   .form-field label {
-    flex: 0 1 22em;
+    -webkit-flex: 0 1 1200em;
     padding: 1em;
     background: #FFF;
-    border: 1px solid #5abc9b;
+    border: 1px solid #e6e6e6;
     color: #2d2d2d;
     font-weight: 400;
     letter-spacing: .09em;
@@ -58,10 +84,10 @@ textarea:focus {
     text-align: center;
     lint-height: 1; }
   .form-field span {
-    flex: 0 1 22em;
+    -webkit-flex: 0 1 42em;
     padding: 1em;
     background: #CCC;
-    border: 1px solid #5abc9b;
+    border: 1px solid #e6e6e6;
     color: #2d2d2d;
     font-weight: 400;
     letter-spacing: .09em;
@@ -69,25 +95,91 @@ textarea:focus {
     font-size: 0.65em;
     text-align: center;
     lint-height: 1; }
+  .form-field button {
+    -webkit-flex: 0 1 40%;
+    margin-top: 10px;
+    padding: 0.7em;
+    color: 2d2d2d;
+    font-size: 0.75rem;
+    font-family: inherit;
+    text-transform: uppercase;
+    letter-spacing: .09em;
+    background: darkgray;
+    border: 0;
+    cursor: pointer; }
+    @media screen and (max-width: 600px) {
+      .form-field button {
+        -webkit-flex: 0 1 100%; } }
   .form-field input,
   .form-field select,
   .form-field textarea {
-    flex: 1; }
-  @media screen and (max-width: 720px) {
+    -webkit-flex: 1; }
+  @media screen and (max-width: 600px) {
     .form-field {
-      flex-wrap: wrap; }
+      -webkit-flex-wrap: wrap; }
       .form-field label {
-        flex: 1; }
+        -webkit-flex: 1;
+        -webkit-flex-direction: column; }
       .form-field input,
       .form-field select,
       .form-field textarea {
-        flex: 1 1 100%;
+        -webkit-flex: 1 1 100%;
         padding: 1em; } }
 
+.form-field1 {
+  display: -webkit-flex;
+  flex-direction: row;
+  margin-bottom: 0.5em; }
+  .form-field1 .sub-container {
+    display: -webkit-flex;
+    -webkit-flex: 0 1 300em;
+    flex-direction: column; }
+    .form-field1 .sub-container label {
+      padding: 1em;
+      background: #FFF;
+      border: 1px solid #e6e6e6;
+      color: #2d2d2d;
+      font-weight: 400;
+      letter-spacing: .09em;
+      text-transform: uppercase;
+      font-size: 0.75em;
+      text-align: center;
+      lint-height: 1; }
+    .form-field1 .sub-container span {
+      padding: 1em;
+      background: #CCC;
+      border: 1px solid #e6e6e6;
+      color: #2d2d2d;
+      font-weight: 400;
+      letter-spacing: .09em;
+      text-transform: uppercase;
+      font-size: 0.65em;
+      text-align: center;
+      lint-height: 1; }
+    .form-field1 .sub-container button {
+      -webkit-flex: 0 1 40%;
+      margin-top: 10px;
+      padding: 0.7em;
+      color: 2d2d2d;
+      font-size: 0.75rem;
+      font-family: inherit;
+      text-transform: uppercase;
+      letter-spacing: .09em;
+      background: darkgray;
+      border: 0;
+      cursor: pointer; }
+      @media screen and (max-width: 600px) {
+        .form-field1 .sub-container button {
+          -webkit-flex: 0 1 100%; } }
+  @media screen and (max-width: 600px) {
+    .form-field1 {
+      -webkit-flex-wrap: wrap;
+      min-width: 25%; } }
+
 .submit-field {
-  flex-direction: row-reverse; }
+  -webkit-flex-direction: row-reverse; }
   .submit-field button {
-    flex: 0 1 40%;
+    -webkit-flex: 0 1 40%;
     margin-top: 10px;
     padding: 0.7em;
     color: #f2f2f2;
@@ -101,8 +193,8 @@ textarea:focus {
     border: 0;
     transition: 0.3s;
     cursor: pointer; }
-    @media screen and (max-width: 720px) {
+    @media screen and (max-width: 600px) {
       .submit-field button {
-        flex: 0 1 100%; } }
+        -webkit-flex: 0 1 100%; } }
 
 /*# sourceMappingURL=style.css.map */
