--- a/sketches/IrrigationApp/css/style.css
+++ b/sketches/IrrigationApp/css/style.css
@@ -17,7 +17,7 @@ form {
   max-width: 1000px;
   min-width: 300px;
   padding: 2em;
-  background: #5abc9b;
+  background: #e6e6e6;
   border-radius: 0.25em;
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.2); }
 
@@ -42,14 +42,40 @@ textarea:focus {
   box-shadow: inset 0.1em 0.1em 0.25em rga(0, 0, 0, 0.2);
   outline: 0; }
 
+.align-right {
+  float: right;
+  margin-right: 15px; }
+
+.align-left {
+  float: left; }
+
+.status-bar {
+  display: -webkit-flex;
+  flex-direction: row;
+  margin-bottom: 0.5em; }
+  .status-bar label {
+    -webkit-flex: 0 1 22em; }
+  @media screen and (max-width: 600px) {
+    .status-bar {
+      -webkit-flex-wrap: wrap; }
+      .status-bar label {
+        -webkit-flex: 1;
+        -webkit-flex-direction: column; }
+      .status-bar input,
+      .status-bar select,
+      .status-bar textarea {
+        -webkit-flex: 1 1 100%;
+        padding: 1em; } }
+
 .form-field {
   display: -webkit-flex;
-  margin-bottom: 1em; }
+  flex-direction: row;
+  margin-bottom: 0.5em; }
   .form-field label {
-    -webkit-flex: 0 1 22em;
+    -webkit-flex: 0 1 1200em;
     padding: 1em;
     background: #FFF;
-    border: 1px solid #5abc9b;
+    border: 1px solid #e6e6e6;
     color: #2d2d2d;
     font-weight: 400;
     letter-spacing: .09em;
@@ -61,7 +87,7 @@ textarea:focus {
     -webkit-flex: 0 1 42em;
     padding: 1em;
     background: #CCC;
-    border: 1px solid #5abc9b;
+    border: 1px solid #e6e6e6;
     color: #2d2d2d;
     font-weight: 400;
     letter-spacing: .09em;
@@ -99,6 +125,56 @@ textarea:focus {
       .form-field textarea {
         -webkit-flex: 1 1 100%;
         padding: 1em; } }
+
+.form-field1 {
+  display: -webkit-flex;
+  flex-direction: row;
+  margin-bottom: 0.5em; }
+  .form-field1 .sub-container {
+    display: -webkit-flex;
+    -webkit-flex: 0 1 300em;
+    flex-direction: column; }
+    .form-field1 .sub-container label {
+      padding: 1em;
+      background: #FFF;
+      border: 1px solid #e6e6e6;
+      color: #2d2d2d;
+      font-weight: 400;
+      letter-spacing: .09em;
+      text-transform: uppercase;
+      font-size: 0.75em;
+      text-align: center;
+      lint-height: 1; }
+    .form-field1 .sub-container span {
+      padding: 1em;
+      background: #CCC;
+      border: 1px solid #e6e6e6;
+      color: #2d2d2d;
+      font-weight: 400;
+      letter-spacing: .09em;
+      text-transform: uppercase;
+      font-size: 0.65em;
+      text-align: center;
+      lint-height: 1; }
+    .form-field1 .sub-container button {
+      -webkit-flex: 0 1 40%;
+      margin-top: 10px;
+      padding: 0.7em;
+      color: 2d2d2d;
+      font-size: 0.75rem;
+      font-family: inherit;
+      text-transform: uppercase;
+      letter-spacing: .09em;
+      background: darkgray;
+      border: 0;
+      cursor: pointer; }
+      @media screen and (max-width: 600px) {
+        .form-field1 .sub-container button {
+          -webkit-flex: 0 1 100%; } }
+  @media screen and (max-width: 600px) {
+    .form-field1 {
+      -webkit-flex-wrap: wrap;
+      min-width: 25%; } }
 
 .submit-field {
   -webkit-flex-direction: row-reverse; }
