--- a/sketches/IrrigationApp/css/style.css
+++ b/sketches/IrrigationApp/css/style.css
@@ -15,7 +15,6 @@ body {
 form {
   width: 100%;
   max-width: 1000px;
-  min-width: 300px;
   padding: 2em;
   background: #e6e6e6;
   border-radius: 0.25em;
@@ -24,22 +23,14 @@ form {
 input,
 select,
 textarea {
-  padding: 0.5em;
-  color: #333;
   font-size: 0.875em;
   font-family: inherit;
-  background: #f4f4f4;
-  border: 1px solid #CCC;
-  border-width: 1px 1px 1px 0;
-  border-radius: 0;
-  appearance: textfield;
-  transition: 0.3s; }
+  border: 1px solid #CCC; }
 
 input:focus,
 select:focus,
 textarea:focus {
-  background: #FFF;
-  box-shadow: inset 0.1em 0.1em 0.25em rga(0, 0, 0, 0.2);
+  background: #CCC;
   outline: 0; }
 
 .align-right {
@@ -73,7 +64,6 @@ textarea:focus {
   margin-bottom: 0.5em; }
   .form-field label {
     -webkit-flex: 0 1 1200em;
-    padding: 1em;
     background: #FFF;
     border: 1px solid #e6e6e6;
     color: #2d2d2d;
@@ -83,48 +73,12 @@ textarea:focus {
     font-size: 0.75em;
     text-align: center;
     lint-height: 1; }
-  .form-field span {
-    -webkit-flex: 0 1 42em;
-    padding: 1em;
-    background: #CCC;
-    border: 1px solid #e6e6e6;
-    color: #2d2d2d;
-    font-weight: 400;
-    letter-spacing: .09em;
-    text-transform: uppercase;
-    font-size: 0.65em;
-    text-align: center;
-    lint-height: 1; }
-  .form-field button {
-    -webkit-flex: 0 1 40%;
-    margin-top: 10px;
-    padding: 0.7em;
-    color: 2d2d2d;
-    font-size: 0.75rem;
-    font-family: inherit;
-    text-transform: uppercase;
-    letter-spacing: .09em;
-    background: darkgray;
-    border: 0;
-    cursor: pointer; }
-    @media screen and (max-width: 600px) {
-      .form-field button {
-        -webkit-flex: 0 1 100%; } }
-  .form-field input,
-  .form-field select,
-  .form-field textarea {
-    -webkit-flex: 1; }
   @media screen and (max-width: 600px) {
     .form-field {
       -webkit-flex-wrap: wrap; }
       .form-field label {
         -webkit-flex: 1;
-        -webkit-flex-direction: column; }
-      .form-field input,
-      .form-field select,
-      .form-field textarea {
-        -webkit-flex: 1 1 100%;
-        padding: 1em; } }
+        -webkit-flex-direction: column; } }
 
 .form-field1 {
   display: -webkit-flex;
