--- a/sketches/IrrigationApp/css/style.scss
+++ b/sketches/IrrigationApp/css/style.scss
@@ -20,7 +20,6 @@
     form {
         width: 100%;
         max-width: 1000px;
-        min-width: 300px;
         padding: 2em;
         background: #e6e6e6;
         border-radius: 0.25em;
@@ -30,23 +29,15 @@
     input,
     select,
     textarea {
-        padding: 0.5em;
-        color: #333;
         font-size: 0.875em;
         font-family: inherit;
-        background: #f4f4f4;
         border: 1px solid #CCC;
-        border-width: 1px 1px 1px 0;
-        border-radius: 0;
-        appearance: textfield;
-        transition: 0.3s;
     }
     
     input:focus,
     select:focus,
     textarea:focus {
-        background: #FFF;
-        box-shadow: inset 0.1em 0.1em 0.25em rga(0, 0, 0, 0.2);
+        background: #CCC;
         outline: 0;
     }
     
@@ -81,13 +72,12 @@
         }
     }
     
-    .form-field {
+    .form-header {
         display: -webkit-flex;
         flex-direction: row;
         margin-bottom: 0.5em;
         label {
             -webkit-flex: 0 1 1200em;
-            padding: 1em;
             background: #FFF;
             border: 1px solid #e6e6e6;
             color: #2d2d2d;
@@ -98,56 +88,16 @@
             text-align: center;
             lint-height: 1;
         }
-        span {
-            -webkit-flex: 0 1 42em;
-            padding: 1em;
-            background: #CCC;
-            border: 1px solid #e6e6e6;
-            color: #2d2d2d;
-            font-weight: 400;
-            letter-spacing: .09em;
-            text-transform: uppercase;
-            font-size: 0.65em;
-            text-align: center;
-            lint-height: 1;
-        }
-        button {
-            -webkit-flex: 0 1 40%;
-            margin-top: 10px;
-            padding: 0.7em;
-            @media screen and (max-width: $break-small) {
-                -webkit-flex: 0 1 100%;
-            }
-            color: 2d2d2d;
-            font-size: 0.75rem;
-            font-family: inherit;
-            text-transform: uppercase;
-            letter-spacing: .09em;
-            background:darkgray;
-            border: 0;
-            cursor: pointer;
-        }
-        input,
-        select,
-        textarea {
-            -webkit-flex: 1;
-        }
         @media screen and (max-width: $break-small) {
             -webkit-flex-wrap: wrap;
             label {
                 -webkit-flex: 1;
                 -webkit-flex-direction: column;
             }
-            input,
-            select,
-            textarea {
-                -webkit-flex: 1 1 100%;
-                padding: 1em;
-            }
         }
     }
     
-    .form-field1 {
+    .form-body {
         display: -webkit-flex;
         flex-direction: row;
         margin-bottom: 0.5em;
