--- a/sketches/IrrigationApp/css/style.scss
+++ b/sketches/IrrigationApp/css/style.scss
@@ -1,176 +1,152 @@
-    $break-small: 600px;
-    $break-large: 1200px;
-    * {
-        box-sizing: border-box;
+$break-small: 700px;
+$break-large: 1200px;
+body {
+    font: normal 18px/1.5 "Fira Sans", "Open Sans", sans-serif;
+    background: #CCC;
+    color: #fff;
+    padding: 0;
+}
+
+.form-container {
+    display: hidden;
+    display: -webkit-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form {
+    width: 100%;
+    max-width: 1000px;
+    padding: 2em;
+    background: #e6e6e6;
+    border-radius: 0.25em;
+    box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
+}
+
+select {
+    font-size: 1em;
+    background: #fff;
+    font-family: inherit;
+    border: none;
+    padding: 5px;
+    border-radius: 0em;
+}
+
+.align-right {
+    float: right;
+    margin-right: 15px;
+}
+
+.align-left {
+    float: left;
+}
+
+.form-header {
+    display: -webkit-flex;
+    flex-direction: row;
+    margin-bottom: 0.5em;
+    label {
+        -webkit-flex: 0 1 1200em;
+        background: #FFF;
+        border: 1px solid #e6e6e6;
+        color: #2d2d2d;
+        font-weight: 400;
+        letter-spacing: .09em;
+        text-transform: uppercase;
+        font-size: 0.75em;
+        text-align: center;
+        lint-height: 1;
     }
-    
-    body {
-        font: normal 18px/1.5 "Fira Sans", "Helvetica Neue", sans-serif;
+    .run-box {
+        width: 100px;
+        display: block;
+        right: 80%;
         background: #CCC;
-        color: #fff;
-        padding: 0;
+        border: none;
+        border-radius: 0px;
+        padding: 0.5em;
+        margin-top: 10px;
     }
-    
-    .form-container {
-        display: -webkit-flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    form {
-        width: 100%;
-        max-width: 1000px;
-        padding: 2em;
-        background: #e6e6e6;
-        border-radius: 0.25em;
-        box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
-    }
-    
-    input,
-    select,
-    textarea {
-        font-size: 0.875em;
-        font-family: inherit;
-        border: 1px solid #CCC;
-    }
-    
-    input:focus,
-    select:focus,
-    textarea:focus {
+    .battery-box {
+        width: 100px;
+        display: block;
+        right: 80%;
         background: #CCC;
-        outline: 0;
+        border: none;
+        border-radius: 0px;
+        padding: 0.5em;
+        margin-top: 10px;
     }
-    
-    .align-right {
-        float: right;
-        margin-right: 15px;
-    }
-    
-    .align-left {
-        float: left;
-    }
-    
-    .status-bar {
-        display: -webkit-flex;
-        flex-direction: row;
-        margin-bottom: 0.5em;
+    @media screen and (max-width: $break-small) {
+        -webkit-flex-wrap: wrap;
         label {
-            -webkit-flex: 0 1 22em;
-        }
-        @media screen and (max-width: $break-small) {
-            -webkit-flex-wrap: wrap;
-            label {
-                -webkit-flex: 1;
-                -webkit-flex-direction: column;
-            }
-            input,
-            select,
-            textarea {
-                -webkit-flex: 1 1 100%;
-                padding: 1em;
-            }
+            -webkit-flex: 1;
+            -webkit-flex-direction: column;
         }
     }
-    
-    .form-header {
+}
+
+.form-body {
+    display: -webkit-flex;
+    flex-direction: row;
+    margin-bottom: 0.5em;
+    text-align: center;
+    font-weight: 400;
+    letter-spacing: .09em;
+    text-transform: uppercase;
+    color: #2d2d2d;
+    .sub-container {
         display: -webkit-flex;
-        flex-direction: row;
-        margin-bottom: 0.5em;
+        position: relative;
+        -webkit-flex: 0 1 300em;
+        flex-direction: column;
+        border: 1px solid #e6e6e6;
         label {
-            -webkit-flex: 0 1 1200em;
+            padding: 1em;
             background: #FFF;
             border: 1px solid #e6e6e6;
-            color: #2d2d2d;
-            font-weight: 400;
-            letter-spacing: .09em;
-            text-transform: uppercase;
             font-size: 0.75em;
-            text-align: center;
             lint-height: 1;
         }
-        @media screen and (max-width: $break-small) {
-            -webkit-flex-wrap: wrap;
-            label {
-                -webkit-flex: 1;
-                -webkit-flex-direction: column;
-            }
+        span {
+            padding: 1em;
+            background: #CCC;
+            font-size: 0.75em;
+            lint-height: 1;
+            min-height: 200px;
         }
-    }
-    
-    .form-body {
-        display: -webkit-flex;
-        flex-direction: row;
-        margin-bottom: 0.5em;
-        .sub-container {
-            display: -webkit-flex;
-            -webkit-flex: 0 1 300em;
-            flex-direction: column;
-            label {
-                padding: 1em;
-                background: #FFF;
-                border: 1px solid #e6e6e6;
-                color: #2d2d2d;
-                font-weight: 400;
-                letter-spacing: .09em;
-                text-transform: uppercase;
-                font-size: 0.75em;
-                text-align: center;
-                lint-height: 1;
-            }
-            span {
-                padding: 1em;
-                background: #CCC;
-                border: 1px solid #e6e6e6;
-                color: #2d2d2d;
-                font-weight: 400;
-                letter-spacing: .09em;
-                text-transform: uppercase;
-                font-size: 0.65em;
-                text-align: center;
-                lint-height: 1;
-            }
-            button {
-                -webkit-flex: 0 1 40%;
-                margin-top: 10px;
-                padding: 0.7em;
-                @media screen and (max-width: $break-small) {
-                    -webkit-flex: 0 1 100%;
-                }
-                color: 2d2d2d;
-                font-size: 0.75rem;
-                font-family: inherit;
-                text-transform: uppercase;
-                letter-spacing: .09em;
-                background:darkgray;
-                border: 0;
-                cursor: pointer;
-            }
-        }
-        @media screen and (max-width: $break-small) {
-            -webkit-flex-wrap: wrap;
-            min-width: 25%;
-        }
-    }
-    
-    .submit-field {
-        -webkit-flex-direction: row-reverse;
         button {
-            -webkit-flex: 0 1 40%;
+            //            position: absolute;
+            //            right: 50%;
+            //            margin-right: -75px;
+            //            bottom: 10%;
+            width: 150px;
+            background: #7298fc;
+            border: none;
+            border-radius: 5px;
             margin-top: 10px;
             padding: 0.7em;
-            @media screen and (max-width: $break-small) {
-                -webkit-flex: 0 1 100%;
-            }
-            color: #f2f2f2;
-            font-size: 1rem;
-            font-family: inherit;
-            text-transform: uppercase;
-            letter-spacing: .09em;
-            text-shadow: 0 1px 0 #FFF;
-            background: #2c8a6a;
-            border-radius: 0.25em;
-            border: 0;
-            transition: 0.3s;
-            cursor: pointer;
+        }
+        button:hover {
+            color: white;
+        }
+        .wide-button {
+            //            position: absolute;
+            //            right: 50%;
+            //            margin-right: -75px;
+            //            bottom: 10%;
+            width: 90%;
+            background: #7298fc;
+            border: none;
+            border-radius: 5px;
+            margin-top: 10px;
+            padding: 1.5em;
+        }
+        .wide-button:hover {
+            color: white;
         }
     }
+    @media screen and (max-width: $break-small) {
+        -webkit-flex-wrap: wrap;
+    }
+}
